# clawvatar-engine

./: .gitignore  Dockerfile  README.md  pyproject.toml
avatars/: README.md
clawvatar/: __init__.py  agent_pipeline.py  cli.py  config.py  engine.py  pipeline.py  server.py
clawvatar/animation/: blendshape.py  expression_engine.py  expression_planner.py  timeline.py
clawvatar/audio/: prosody.py  stream.py  vad.py
clawvatar/avatar/: loader.py
clawvatar/encoding/: video.py
clawvatar/idle/: animator.py
clawvatar/lipsync/: energy.py  phoneme.py  rhubarb.py  smooth.py  visemes.py
clawvatar/providers/: base.py  registry.py
clawvatar/renderer/: engine.py
clawvatar/static/: index.html
docs/: PROVIDERS.md  SETUP.md
tests/: test_audio_stream.py  test_avatar_loader.py  test_blendshape_animator.py  test_config.py  test_encoding.py  test_energy_lipsync.py  test_idle.py  test_visemes.py
